--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "strapi deploy",
     "develop": "strapi develop",
     "seed:example": "node ./scripts/seed.js",
-    "start": "strapi start",
+    "start": "PORT=10000 NODE_ENV=production node node_modules/@strapi/strapi/bin/strapi.js start",
     "strapi": "strapi"
   },
   "dependencies": {
